# claude-langfuse-example-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
data/control_registry/: control_variants.json  objectives.json
data/datasets/: knowledge_base.json  receipt_test_cases.json  test_cases.json
data/inputs/: example_items.json
data/obligations/: Obligations and Controls example.xlsx
data/obligations/generated_controls/: gen_20251021_221132_29aee9.json  gen_20251021_221318_2ed392.json  gen_20251021_221940_2c2836.json  gen_20251022_081737_69570c.json  gen_20251022_082157_4be2b1.json  gen_20251022_082416_38572c.json  gen_20251022_083352_2cc702.json  gen_20251022_083702_03514e.json  gen_20251022_083955_733129.json
data/outputs/: example_20251022_092046.json
docs/: FUTURE_CONSIDERATIONS.md  FUTURE_IMPROVEMENTS.md  LANGFUSE_INTEGRATION.md  SYSTEM_DESIGN.md  TESTING_GUIDE.md
examples/: __init__.py  interactive_agent.py  run_agent.py  run_control_generation.py  run_evaluation.py  run_example.py  run_receipt_evaluation.py  run_receipt_inspection.py  setup_langfuse_dataset.py
src/agent_sdk/: __init__.py
src/agent_sdk/agents/: __init__.py  control_generation.py  customer_support.py  example_llm_agent.py  llm_obligation_mapper.py  llm_variant_mapper.py  receipt_inspection.py
src/agent_sdk/evals/: __init__.py  evaluator.py  metrics.py
src/agent_sdk/models/: __init__.py  compliance.py  domain_models.py  llm_responses.py
src/agent_sdk/registries/: __init__.py  objective_registry.py  variant_registry.py
src/agent_sdk/utils/: __init__.py  config.py  langfuse_check.py  langfuse_datasets.py  langfuse_wrapper.py  models.py
tests/: __init__.py
tests/unit/: test_config.py  test_example_models.py  test_models.py
